# algos

./: .gitignore  CMakeLists.txt
cmake/: NpmPackaging.cmake
cpp/: CMakeLists.txt  README.md
cpp/cmake/: Utils.cmake
cpp/knuth-permutation-algo-L/: CMakeLists.txt
cpp/knuth-permutation-algo-L/include/permutation/: permutation.h
cpp/knuth-permutation-algo-L/src/: trace.cpp  wasm_api.cpp
cpp/src/: main.cpp
knuth-permutation-algo-L/: .gitignore  CMakeLists.txt  Makefile  package.json.in
knuth-permutation-algo-L/include/permutation/: permutation.h  permutation_impl.h  trace.h
knuth-permutation-algo-L/src/: main.cpp  permutation.cpp  trace.cpp  wasm_api.cpp
knuth-permutation-algo-L/tests/: test_permutation.cpp
python/: pyproject.toml
