[project]
name = "algos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/segment-tree",
    "packages/topo-sort",
    "packages/cycle-detection",
    "packages/euler_tour",
    "packages/utils",
    "bridge",
    "packages/bridge",
]
